    - replace regex with pam_systemd sym file;
    - use the same code for verfiying machine names everywhere;
 * units:
    - don't output hostname to terminal at startup;
    - don't output sysctl keys to terminal at startup;
    - move hostname service to multi-user.target;
    - order systemd-tmpfiles-clean.service after time-sync.target;
    - skip mounting /tmp if it is a symlink;
 * busctl:
    - remove pager;
    - remove machine argument option;
    - remove show-machine argument option;
 * systemctl:
    - add new "is-system-running" command;
 * fsck:
    - consider a fsck implementation linked to /bin/true non-existant;
 * shared:
    - rename stream_bytes to copy_bytes function;
    - add copy_bytes function to header file;
    - simplify rm_rf_children_dangerous function;
    - rename path_strv_canonicalize_absolute functions;
    - do not strip /dev prefix twice;
    - treat fuse.sshfs as a network filesystem;
    - refuse considering UID 0xFFFF and 0xFFFFFFFF valid;
    - return -ENXIO for -1 uids in parse_uid function;
    - check home path is absolute;
    - update arch macros;
    - add is_localhost function;
    - add machine_name_is_valid function;
 * tmpfiles:
    - allow following symlinks for w lines;
    - create directories already with the right label;
    - do not fail when copying an empty directory;
    - make sure "C" doesn't copy anything if the destination already exists;
    - copy/link /usr/share/factory/ files when the source argument is omitted;
 * pc:
    - export $libdir in the .pc file;
    - expose more drop-in dirs in the .pc file;
    - no longer expose exec_prefix in .pc file;
 * po:
    - add German translation;
 * man:
    - update info for kernel-command-line;
    - fix sd_watchdog_enabled function prototype;
    - add file-hierarchy man page;
    - drop references to manual StandardError=syslog from daemon(7);
    - beef up systemd-fsck description;
    - mention that x-systemd.device-timeout is only for fstab;